--- a/imc/imc.html
+++ b/imc/imc.html
@@ -201,6 +201,7 @@
           <label>Sexo:</label><select name="sexo" id="sexo" required="required">
               <option id="sexo" value="masculino">Masculino</option>
               <option id="name" value="feminino">Feminino</option>
+              <option id="name" value="outros">Outros</option>
           </select>
         
         
